--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,6 @@
 body {
   background-color: black;
-}
-
-body .temp {
-  margin: 3% 0;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  margin-right: 90%;
+  height: 100vh;
 }
 
 body .columnRight {
@@ -16,10 +10,37 @@ body .columnRight {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 30%;
+  width: 25%;
 }
 
 body .columnRight a {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+body .main img {
+  height: 80%;
+  width: 80%;
+  margin: 5% 5%;
+}
+
+body .footer {
+  position: absolute;
+  bottom: 9px;
+  width: 100%;
+}
+
+body .footer .footerRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body .footer .footerRow .credit {
   color: white;
 }
 /*# sourceMappingURL=styles.css.map */
