--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,17 +1,39 @@
 body {
     background-color: black;
-    .temp {
-        margin: 3% 0;
-        transform: scale(1.1);
-        margin-right: 90%;
-    }
+    height: 100vh;
+   
     .columnRight {
        display: flex;
        justify-content: space-between;
-       width: 30%;
+       width: 25%;
        a {
         color: white;
+        font-size: 1.4rem;
+        font-weight: 600;
        }
+    }
+
+    .main {
+        
+        img {
+            height: 80%;
+            width: 80%;
+            margin: 5% 5%;
+        }
+        
+    }
+    // ========================footer===================================
+    .footer {
+        position: absolute;
+        bottom: 9px;
+        width: 100%;
+        .footerRow {
+            display: flex;
+            justify-content: center;
+            .credit {
+                color: white;
+            }
+        }
     }
 }
 
